<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab2bSethRuji</string>
    <string name="hello_world">Hello world!</string>
    <string name="row1">Row One</string>
    <string name="row2">Row Two</string>
    <string name="row3">Row Three</string>
    <string name="row4">Row Four</string>
    
    <string name="yellow">Yellow</string>
	<string name="red">Red</string>
	<string name="blue">Blue</string>
	<string name="green">Green</string>
</resources>

