<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

       <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/red"
        android:background="@color/red"/>
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@color/green"
        android:text="@string/green" />
       <TextView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:background="@color/yellow"
        android:layout_weight="1"
        android:text="@string/yellow" />
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@color/blue"
        android:text="@string/blue" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row4" />

</LinearLayout>
